#94 Added Admin to admin area to add website together

--- a/_source/LigaCancer/Areas/Admin/Views/Presence/Index.cshtml
+++ b/_source/LigaCancer/Areas/Admin/Views/Presence/Index.cshtml
@@ -117,7 +117,7 @@
         <script src="~/lib/pdfmake/pdfmake.min.js"></script>
         <script src="~/lib/pdfmake/vfs_fonts.js"></script>
         <script src="~/lib/datatables-buttons/js/buttons.html5.min.js"></script>*@
-        <script src="~/js/presence.js"></script>
+        <script src="~/js/admin/presence.js"></script>
     </environment>
     <environment exclude="Development">
         <script src="~/dist/js/presence.min.js" asp-append-version="true"></script>
