--- a/_source/LigaCancer/Views/Shared/_Layout.cshtml
+++ b/_source/LigaCancer/Views/Shared/_Layout.cshtml
@@ -1,13 +1,51 @@
 ﻿<!DOCTYPE html>
-
 <html lang="pt-br">
 <head>
-    <base href="./">
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <!-- Required meta tags -->
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>@ViewData["Title"] | Rede Videirense de combate ao Câncer</title>
+
+    @* Seo Tags *@
+    <meta name="description" content="Rede Videirense de Combate ao Câncer é um orgão não governamental para auxílio de pessoas com câncer">
+    <meta name="keywords" content="câncer, videira, auxílio, ong">
+    <meta name="robots" content="">
+    <meta name="revisit-after" content="1 day">
+    <meta name="language" content="Portuguese">
+    @* OG Properties *@
+    <meta property="og:title" content="HomePage" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="http://www.rvcc.com" />
+    @* Todo, put the logo here *@
+    @*<meta property="og:image" content="http://ia.media-imdb.com/images/rock.jpg" />*@
+    <meta property="og:description" content="Sean Connery found fame and fortune as the suave, sophisticated British agent, James Bond." />
+    <meta property="og:locale" content="pt-br" />
+    <meta property="og:site_name" content="Rede Videirense de combate ao Câncer" />
+
+    <!-- Bootstrap CSS -->
+    <link href="~/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
+    <!-- Font -->
+    <link href="~/css/fontawesome.min.css" rel="stylesheet" />
+    <!-- Slicknav -->
+    <link href="~/css/cms/slicknav.css" rel="stylesheet" />
+    <!-- Animate -->
+    <link href="~/css/cms/animate.css" rel="stylesheet" />
+    <!-- Main Style -->
+    <link href="~/css/cms/main.css" rel="stylesheet" />
+    <!-- Extras Style -->
+    <link href="~/css/cms/extras.css" rel="stylesheet" />
+    <!-- Responsive Style -->
+    <link href="~/css/cms/responsive.css" rel="stylesheet" />
+
 </head>
 <body>
     @RenderBody()
+
+    <script src="~/lib/jquery/jquery.min.js"></script>
+    <script src="~/lib/popper/umd/popper.min.js"></script>
+    <script src="~/lib/bootstrap/js/bootstrap.min.js"></script>
+    <script src="~/js/cms/jquery.nav.js"></script>
+    <script src="~/js/cms/jquery.slicknav.js"></script>
+    <script src="~/js/cms/main.js"></script>
 </body>
 </html>
