--- a/_source/LigaCancer/Areas/Admin/Views/CancerType/Index.cshtml
+++ b/_source/LigaCancer/Areas/Admin/Views/CancerType/Index.cshtml
@@ -97,7 +97,7 @@
         <script src="~/lib/pdfmake/pdfmake.min.js"></script>
         <script src="~/lib/pdfmake/vfs_fonts.js"></script>
         <script src="~/lib/datatables-buttons/js/buttons.html5.min.js"></script>*@
-        <script src="~/js/cancerType.js"></script>
+        <script src="~/js/admin/cancerType.js"></script>
     </environment>
     <environment exclude="Development">
         <script src="~/dist/js/cancer-type.min.js" asp-append-version="true"></script>
