--- a/_source/LigaCancer/Areas/Admin/Views/Doctor/Index.cshtml
+++ b/_source/LigaCancer/Areas/Admin/Views/Doctor/Index.cshtml
@@ -100,7 +100,7 @@
         <script src="~/lib/pdfmake/pdfmake.min.js"></script>
         <script src="~/lib/pdfmake/vfs_fonts.js"></script>
         <script src="~/lib/datatables-buttons/js/buttons.html5.min.js"></script>*@
-        <script src="~/js/doctor.js"></script>
+        <script src="~/js/admin/doctor.js"></script>
     </environment>
     <environment exclude="Development">
         <script src="~/dist/js/doctor.min.js" asp-append-version="true"></script>
