--- a/_source/LigaCancer/Areas/Admin/Views/Home/Index.cshtml
+++ b/_source/LigaCancer/Areas/Admin/Views/Home/Index.cshtml
@@ -170,8 +170,8 @@
 @section scripts {
     <environment names="Development">
         <script src="~/lib/chart-js/Chart.min.js"></script>
-        <script src="~/js/custom-tooltips.min.js"></script>
-        <script src="~/js/home.js"></script>
+        <script src="~/js/admin/custom-tooltips.min.js"></script>
+        <script src="~/js/admin/home.js"></script>
     </environment>
     <environment exclude="Development">
         <script src="~/dist/js/home.min.js" asp-append-version="true"></script>
