--- a/_source/LigaCancer/Areas/Admin/Views/Medicine/Index.cshtml
+++ b/_source/LigaCancer/Areas/Admin/Views/Medicine/Index.cshtml
@@ -98,7 +98,7 @@
         <script src="~/lib/pdfmake/pdfmake.min.js"></script>
         <script src="~/lib/pdfmake/vfs_fonts.js"></script>
         <script src="~/lib/datatables-buttons/js/buttons.html5.min.js"></script>*@
-        <script src="~/js/medicine.js"></script>
+        <script src="~/js/admin/medicine.js"></script>
     </environment>
     <environment exclude="Development">
         <script src="~/dist/js/medicine.min.js" asp-append-version="true"></script>
