--- a/_source/LigaCancer/Areas/Admin/Views/Patient/Index.cshtml
+++ b/_source/LigaCancer/Areas/Admin/Views/Patient/Index.cshtml
@@ -216,7 +216,7 @@
         <script src="~/lib/dropzone/min/dropzone.min.js"></script>
         <script src="~/lib/jeditable/jquery.jeditable.min.js"></script>
         <script src="~/lib/jquery-mask/jquery.mask.min.js"></script>
-        <script src="~/js/patient.js"></script>
+        <script src="~/js/admin/patient.js"></script>
     </environment>
     <environment exclude="Development">
         <script src="~/dist/js/patient.min.js" asp-append-version="true"></script>
