--- a/_source/LigaCancer/Areas/Admin/Views/User/Index.cshtml
+++ b/_source/LigaCancer/Areas/Admin/Views/User/Index.cshtml
@@ -101,7 +101,7 @@
         <script src="~/lib/datatables-buttons/js/buttons.html5.min.js"></script>*@
         <script src="~/lib/select2/js/select2.full.min.js"></script>
         <script src="~/lib/select2/js/i18n/pt-BR.js"></script>
-        <script src="~/js/user.js"></script>
+        <script src="~/js/admin/user.js"></script>
     </environment>
     <environment exclude="Development">
         <script src="~/dist/js/user.min.js" asp-append-version="true"></script>
