--- a/_source/LigaCancer/Views/Home/Index.cshtml
+++ b/_source/LigaCancer/Views/Home/Index.cshtml
@@ -1,1 +1,232 @@
-﻿This is the homepage
+﻿<!-- Header Area wrapper Starts -->
+<header id="header-wrap">
+    <!-- Navbar Start -->
+    <nav class="navbar navbar-expand-lg fixed-top scrolling-navbar indigo">
+        <div class="container">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-navbar" aria-controls="main-navbar" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                    <span class="icon-menu"></span>
+                    <span class="icon-menu"></span>
+                    <span class="icon-menu"></span>
+                </button>
+                <a href="/" class="navbar-brand"><img src="img/logo.png" alt=""></a>
+            </div>
+            <div class="collapse navbar-collapse" id="main-navbar">
+                <ul class="navbar-nav mr-auto w-100 justify-content-end clearfix">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="#sliders">
+                            Home
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#about">
+                            About
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#contact">
+                            Contact
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+
+        <!-- Mobile Menu Start -->
+        <ul class="mobile-menu navbar-nav">
+            <li>
+                <a class="page-scroll" href="#sliders">
+                    Home
+                </a>
+            </li>
+            <li>
+                <a class="page-scroll" href="#about">
+                    About
+                </a>
+            </li>
+            <li>
+                <a class="page-scroll" href="#contact">
+                    Contact
+                </a>
+            </li>
+        </ul>
+        <!-- Mobile Menu End -->
+
+    </nav>
+    <!-- Navbar End -->
+    <!-- sliders -->
+    <div id="sliders">
+        <div class="full-width">
+            <!-- light slider -->
+            <div id="light-slider" class="carousel slide">
+                <div id="carousel-area">
+                    <div id="carousel-slider" class="carousel slide" data-ride="carousel">
+                        <div class="carousel-inner" role="listbox">
+                            <div class="carousel-item active">
+                                <img src="img/bg-1.jpg" alt="">
+                                <div class="carousel-caption">
+                                    <h3 class="slide-title animated fadeInDown"><span>RVCC</span> - Rede Videirense de Combate ao Câncer</h3>
+                                    <h5 class="slide-text animated fadeIn">Lorem ipsum dolor sit amet, consectetuer adipiscing elit<br> Curabitur ultricies nisi Nam eget dui. Etiam rhoncus</h5>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- End sliders -->
+
+</header>
+<!-- Header Area wrapper End -->
+<!-- About Section Start -->
+<div id="about" class="section-padding">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-3 col-md-6 col-xs-12">
+                <div class="about block text-center">
+                    <img src="img/img1.png" alt="">
+                    <h5><a href="#">About Title</a></h5>
+                    <p>Quisque sit amet libero purus. Nulla a dignissim quam. In hac habitasse platea dictumst.</p>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-6 col-xs-12">
+                <div class="about block text-center">
+                    <img src="img/img1.png" alt="">
+                    <h5><a href="#">About Title</a></h5>
+                    <p>Quisque sit amet libero purus. Nulla a dignissim quam. In hac habitasse platea dictumst.</p>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-6 col-xs-12">
+                <div class="about block text-center">
+                    <img src="img/img1.png" alt="">
+                    <h5><a href="#">About Title</a></h5>
+                    <p>Quisque sit amet libero purus. Nulla a dignissim quam. In hac habitasse platea dictumst.</p>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-6 col-xs-12">
+                <div class="about block text-center">
+                    <img src="img/img1.png" alt="">
+                    <h5><a href="#">About Title</a></h5>
+                    <p>Quisque sit amet libero purus. Nulla a dignissim quam. In hac habitasse platea dictumst.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- About Section End -->
+
+<section id="contact" class="contact-form section-padding">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <h2 class="section-title wow fadeInDown animated" data-wow-delay="0.3s">Contact Us</h2>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-8 col-md-6 col-xs-12">
+                <h3 class="title-head text-left">Get in touch</h3>
+                <form class="contact-form" data-toggle="validator">
+                    <div class="row">
+                        <div class="col-lg-4 col-md-12 col-xs-12">
+                            <div class="form-group">
+                                <i class="contact-icon fa fa-user"></i>
+                                <input type="text" class="form-control" id="name" placeholder="Full Name" required data-error="Please enter your name">
+                                <div class="help-block with-errors"></div>
+                            </div>
+                        </div>
+                        <div class="col-lg-4 col-md-12 col-xs-12">
+                            <div class="form-group">
+                                <i class="contact-icon fa fa-envelope-o"></i>
+                                <input type="email" class="form-control" id="email" placeholder="Email" required data-error="Please enter your email">
+                                <div class="help-block with-errors"></div>
+                            </div>
+                        </div>
+                        <div class="col-lg-4 col-md-12 col-xs-12">
+                            <div class="form-group">
+                                <i class="contact-icon fa fa-pencil-square-o"></i>
+                                <input type="text" class="form-control" id="subject" placeholder="Subject" required data-error="Please enter your Subject">
+                                <div class="help-block with-errors"></div>
+                            </div>
+                        </div>
+                        <div class="col-lg-12 col-md-12 col-xs-12">
+                            <textarea class="form-control" id="message" rows="4" placeholder="Message" required data-error="Please enter your message"></textarea>
+                            <div class="help-block with-errors"></div>
+                            <button type="submit" id="form-submit" class="btn btn-common btn-form-submit">Send Message</button>
+                            <div id="msgSubmit" class="h3 text-center hidden"></div>
+                            <div class="clearfix"></div>
+                        </div>
+                    </div>
+                </form>
+            </div>
+
+            <div class="col-lg-4 col-md-6 col-xs-12">
+                <h4 class="contact-info-title text-left">Contact Information</h4>
+                <div class="contact-info">
+                    <address>
+                        <i class="lni-map-marker icons cyan-color contact-info-icon"></i>
+                        Level 13, 2 Elizabeth St, Melbourne,
+                    </address>
+                    <div class="tel-info">
+                        <a href="tel:1800452308"><i class="lni-mobile icons cyan-color contact-info-icon"></i>1800 452 308</a>
+                        <a href="tel:+61(8)82343555"><i class="lni-phone icons cyan-color contact-info-icon"></i>+61 (8) 8234 3555</a>
+                    </div>
+                    <a href="mailto:hello@spiritapp.com"><i class="lni-envelope icons cyan-color contact-info-icon"></i>admin@uideck.com</a>
+                    <a href="#"><i class="lni-tab icons cyan-color contact-info-icon"></i>www.uideck.com</a>
+                    <ul class="social-links">
+                        <li>
+                            <a href="#" class="fa fa-facebook"></a>
+                        </li>
+                        <li>
+                            <a href="#" class="fa fa-twitter"></a>
+                        </li>
+                        <li>
+                            <a href="#" class="fa fa-instagram"></a>
+                        </li>
+                        <li>
+                            <a href="#" class="fa fa-linkedin"></a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<!-- Contact Form Section End -->
+<!-- Footer Section -->
+<footer class="footer">
+    <!-- Copyright -->
+    <div id="copyright">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-6 col-md-6 col-xs-12">
+                    <p class="copyright-text">
+                        Todos os direitos reservados © 2019 - Desenvolvido por <a href="https://github.com/felipepergher" target="_blank">Felipe Pergher</a>
+                    </p>
+                </div>
+                <div class="col-lg-6 col-md-6 col-xs-12">
+                    <ul class="nav nav-inline justify-content-end">
+                        <li class="nav-item">
+                            <a asp-action="Index" asp-controller="Home" asp-area="Admin">Administrativo</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Copyright  End-->
+
+</footer>
+<!-- Footer Section End-->
+<!-- Go to Top Link -->
+<a href="#" class="back-to-top">
+    <i class="fa fa-arrow-up"></i>
+</a>
+
+<!-- Preloader -->
+<div id="preloader">
+    <div class="loader" id="loader-1"></div>
+</div>
+<!-- End Preloader -->
