#94 Added title to homepages

--- a/_source/LigaCancer/Areas/Admin/Views/Home/Index.cshtml
+++ b/_source/LigaCancer/Areas/Admin/Views/Home/Index.cshtml
@@ -1,4 +1,7 @@
 ﻿@model LigaCancer.Models.ViewModel.HomeViewModel
+@{
+    ViewData["Title"] = "Admin Homepage";
+}
 
 <main class="main">
     <ol class="breadcrumb">
