--- a/_source/LigaCancer/Views/Home/Index.cshtml
+++ b/_source/LigaCancer/Views/Home/Index.cshtml
@@ -1,4 +1,8 @@
-﻿<!-- Header Area wrapper Starts -->
+﻿@{
+    ViewData["Title"] = "Homepage";
+}
+
+<!-- Header Area wrapper Starts -->
 <header id="header-wrap">
     <!-- Navbar Start -->
     <nav class="navbar navbar-expand-lg fixed-top scrolling-navbar indigo">
