--- a/_source/LigaCancer/Areas/Admin/Views/User/Partials/_AddUser.cshtml
+++ b/_source/LigaCancer/Areas/Admin/Views/User/Partials/_AddUser.cshtml
@@ -37,19 +37,19 @@
         <div class="form-group">
             <label asp-for="Password" class="control-label"></label>
             <div class="input-group">
-                <input asp-for="Password" class="form-control" id="password"/>
-                        <i class="eye-password fas fa-eye-slash" id="eyePassword" />
-                <span asp-validation-for="Password" class="text-danger" ></span>
+                <input asp-for="Password" class="form-control password" />
+                <i class="eye-password fas fa-eye-slash eyePassword" />
             </div>
+            <span asp-validation-for="Password" class="text-danger"></span>
         </div>
         <div class="form-group">
             <div class="input-group mt-2">
                 <label asp-for="ConfirmPassword" class="control-label"></label>
                 <div class="input-group">
-                    <input asp-for="ConfirmPassword" class="form-control" id="passwordConfirm" />
-                        <i class="eye-password fas fa-eye-slash" id="eyePasswordConfirm" />
+                    <input asp-for="ConfirmPassword" class="form-control" />
+                    <i class="eye-password fas fa-eye-slash eyePassword" />
                 </div>
-                    <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
+                <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
             </div>
         </div>
     </div>
