--- a/_source/LigaCancer/Areas/Identity/Pages/Account/Login.cshtml
+++ b/_source/LigaCancer/Areas/Identity/Pages/Account/Login.cshtml
@@ -40,7 +40,7 @@
                                 </span>
                             </div>
                             <input asp-for="Login.Password" type="password" class="form-control" placeholder="Senha" id="password">
-                            <i class="eye-password fas fa-eye-slash" id="eyePassword"></i>
+                            <i class="eye-password fas fa-eye-slash eyePassword"></i>
                         </div>
                         <span asp-validation-for="Login.Password" class="text-danger ml-5"></span>
                     </div>
@@ -68,10 +68,9 @@
     {
     <partial name="_ValidationScriptsPartial" />
     <environment names="Development">
-        <script src="~/js/login.js"></script>
+        <script src="~/js/admin/login.js"></script>
     </environment>
     <environment exclude="Development">
         <script src="~/dist/js/login.min.js" asp-append-version="true"></script>
-        <script src="~/js/login.js"></script>
     </environment>
 }
