--- a/_source/LigaCancer/Areas/Identity/Pages/Account/ResetPassword.cshtml
+++ b/_source/LigaCancer/Areas/Identity/Pages/Account/ResetPassword.cshtml
@@ -33,8 +33,8 @@
                                     <i class="fa fa-passport"></i>
                                 </span>
                             </div>
-                            <input asp-for="ResetPassword.Password" type="password" class="form-control" placeholder="Senha" id="passwordConfirm">
-                                <i class="eye-password fas fa-eye-slash" id="eyePasswordConfirm"></i>
+                            <input asp-for="ResetPassword.Password" type="password" class="form-control" placeholder="Senha">
+                            <i class="eye-password fas fa-eye-slash eyePassword"></i>
                         </div>
                         <span asp-validation-for="ResetPassword.Password" class="text-danger ml-5"></span>
                     </div>
@@ -46,8 +46,8 @@
                                     <i class="fa fa-passport"></i>
                                 </span>
                             </div>
-                            <input asp-for="ResetPassword.ConfirmPassword" type="password" class="form-control" placeholder="Confirmação senha" id="password">
-                                <i class="eye-password fas fa-eye-slash" id="eyePassword"></i>
+                            <input asp-for="ResetPassword.ConfirmPassword" type="password" class="form-control" placeholder="Confirmação senha">
+                            <i class="eye-password fas fa-eye-slash eyePassword"></i>
                         </div>
                         <span asp-validation-for="ResetPassword.ConfirmPassword" class="text-danger ml-5"></span>
                     </div>
@@ -68,9 +68,9 @@
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
     <environment names="Development">
-        <script src="~/js/reset.js"></script>
+        <script src="~/js/admin/reset-password.js"></script>
     </environment>
     <environment exclude="Development">
-        <script src="~/js/reset.js"></script>
+        <script src="~/dist/js/reset-password.min.js" asp-append-version="true"></script>
     </environment>
 }
