--- a/_source/LigaCancer/Views/Shared/_LayoutBaseAdmin.cshtml
+++ b/_source/LigaCancer/Views/Shared/_LayoutBaseAdmin.cshtml
@@ -10,8 +10,8 @@
 
     <environment names="Development">
         <link href="~/css/fontawesome.min.css" rel="stylesheet" />
-        <link href="~/css/style.css" rel="stylesheet" />
-        <link href="~/css/custom.css" rel="stylesheet" />
+        <link href="~/css/admin/style.css" rel="stylesheet" />
+        <link href="~/css/admin/custom.css" rel="stylesheet" />
     </environment>
     <environment exclude="Development">
         <link href="~/dist/css/main.min.css" rel="stylesheet" asp-append-version="true" />
@@ -26,11 +26,11 @@
 
     <environment names="Development">
         <script src="~/lib/jquery/jquery.min.js"></script>
-        <script src="~/js/coreui.min.js"></script>
+        <script src="~/js/admin/coreui.min.js"></script>
         <script src="~/lib/popper/umd/popper.min.js"></script>
         <script src="~/lib/bootstrap/js/bootstrap.min.js"></script>
         <script src="~/lib/sweetalert2/sweetalert2.all.min.js"></script>
-        <script src="~/js/main.js"></script>
+        <script src="~/js/admin/main.js"></script>
     </environment>
     <environment exclude="Development">
         <script src="~/dist/js/main.min.js" asp-append-version="true"></script>
