--- a/_source/LigaCancer/wwwroot/css/admin/custom.css
+++ b/_source/LigaCancer/wwwroot/css/admin/custom.css
@@ -68,8 +68,9 @@
     margin-left: auto;
     position: absolute;
     top: 50%;
-    right: 5px;
+    right: 15px;
     transform: translate(-50%, -50%);
     margin-right: auto;
     color:#5c6873;
+    z-index: 10;
 }
