#94 Adjusts on homepage

--- a/_source/LigaCancer/Areas/Admin/Views/User/Partials/_AddUser.cshtml
+++ b/_source/LigaCancer/Areas/Admin/Views/User/Partials/_AddUser.cshtml
@@ -37,7 +37,7 @@
         <div class="form-group">
             <label asp-for="Password" class="control-label"></label>
             <div class="input-group">
-                <input asp-for="Password" class="form-control password" />
+                <input asp-for="Password" class="form-control" />
                 <i class="eye-password fas fa-eye-slash eyePassword" />
             </div>
             <span asp-validation-for="Password" class="text-danger"></span>
