--- a/_source/LigaCancer/Areas/Admin/Views/CancerType/Index.cshtml
+++ b/_source/LigaCancer/Areas/Admin/Views/CancerType/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model LigaCancer.Models.SearchModel.CancerTypeSearchModel
 @using LigaCancer.Code
 @{
-    ViewData["Title"] = "Tipos de Câncer";
+    ViewData["Title"] = "Cânceres";
     Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
 }
 
@@ -21,7 +21,7 @@
             <a asp-controller="Home" asp-action="Index">Home</a>
         </li>
         <li class="breadcrumb-item">
-            Tipos de Câncer
+            Cânceres
         </li>
     </ol>
     <div class="container-fluid">
@@ -60,7 +60,7 @@
 
                         <div class="card">
                             <div class="card-header">
-                                <i class="fa fa-notes-medical"></i> Tipos de Câncer
+                                <i class="fa fa-notes-medical"></i> Cânceres
                             </div>
                             <div class="card-block">
                                 <div class="form-inline float-right">
