--- a/_source/LigaCancer/Areas/Admin/Views/Patient/Index.cshtml
+++ b/_source/LigaCancer/Areas/Admin/Views/Patient/Index.cshtml
@@ -72,7 +72,7 @@
                                                         data-language="pt-BR"
                                                         data-ajax--url="/api/cancerType/select2Get" 
                                                         data-ajax--data-type="json"
-                                                        data-placeholder="Tipos de Câncer">
+                                                        data-placeholder="Cânceres">
                                                     <option value=""></option>
                                                 </select>
                                             </div>
