--- a/_source/LigaCancer/Areas/Admin/Views/Home/Index.cshtml
+++ b/_source/LigaCancer/Areas/Admin/Views/Home/Index.cshtml
@@ -64,7 +64,7 @@
                             </div>
                         </div>
                         <div class="col-sm-12 col-md mb-sm-2 mb-0">
-                            <div class="text-muted">Tipos de câncer</div>
+                            <div class="text-muted">Cânceres</div>
                             <a asp-action="Index" asp-controller="CancerType" class="no-decoration"><strong>@Model.CancerTypeCount</strong></a>
                             <div class="progress progress-xs mt-2">
                                 <div class="progress-bar bg-warning" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
