--- a/_source/LigaCancer/Areas/Admin/Views/Patient/Partials/_PatientInformation.cshtml
+++ b/_source/LigaCancer/Areas/Admin/Views/Patient/Partials/_PatientInformation.cshtml
@@ -7,7 +7,7 @@
             <select asp-for="CancerTypes" asp-items="Model.SelectCancerTypes" class="form-control patientInformationSelect" style="width: 100%"
                     data-theme="bootstrap" 
                     data-language="pt-BR" 
-                    data-placeholder="Tipos de Câncer" 
+                    data-placeholder="Cânceres" 
                     data-width="resolve"
                     data-tags="true" 
                     data-allow-clear="true"></select>
