--- a/_source/LigaCancer/Views/Shared/_LayoutAdmin.cshtml
+++ b/_source/LigaCancer/Views/Shared/_LayoutAdmin.cshtml
@@ -81,7 +81,7 @@
                     </li>
                     <li class="nav-item">
                         <a asp-action="Index" asp-controller="CancerType" class="nav-link">
-                            <i class="nav-icon fa fa-notes-medical"></i> Tipos de Câncer
+                            <i class="nav-icon fa fa-notes-medical"></i> Cânceres
                         </a>
                     </li>
                     <li class="nav-item">
