--- a/_source/LigaCancer/Views/Home/Index.cshtml
+++ b/_source/LigaCancer/Views/Home/Index.cshtml
@@ -26,12 +26,12 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#about">
-                            About
+                            Sobre
                         </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#contact">
-                            Contact
+                            Contato
                         </a>
                     </li>
                 </ul>
@@ -69,10 +69,9 @@
                     <div id="carousel-slider" class="carousel slide" data-ride="carousel">
                         <div class="carousel-inner" role="listbox">
                             <div class="carousel-item active">
-                                <img src="img/bg-1.jpg" alt="">
+                                <img src="img/imagem4.jpg" alt="">
                                 <div class="carousel-caption">
                                     <h3 class="slide-title animated fadeInDown"><span>RVCC</span> - Rede Videirense de Combate ao Câncer</h3>
-                                    <h5 class="slide-text animated fadeIn">Lorem ipsum dolor sit amet, consectetuer adipiscing elit<br> Curabitur ultricies nisi Nam eget dui. Etiam rhoncus</h5>
                                 </div>
                             </div>
                         </div>
@@ -89,32 +88,18 @@
 <div id="about" class="section-padding">
     <div class="container">
         <div class="row">
-            <div class="col-lg-3 col-md-6 col-xs-12">
+            <div class="col-lg-6 col-md-6 col-xs-12">
                 <div class="about block text-center">
-                    <img src="img/img1.png" alt="">
-                    <h5><a href="#">About Title</a></h5>
-                    <p>Quisque sit amet libero purus. Nulla a dignissim quam. In hac habitasse platea dictumst.</p>
+                    <img src="img/outubro-rosa.jpg" alt="">
+                    <h5><a href="#">Outubro Rosa</a></h5>
+                    <p>Campanha de conscientização que tem como objetivo principal alertar as mulheres e a sociedade sobre a importância da prevenção e do diagnóstico precoce do câncer de mama e mais recentemente sobre o câncer de colo do útero.</p>
                 </div>
             </div>
-            <div class="col-lg-3 col-md-6 col-xs-12">
+            <div class="col-lg-6 col-md-6 col-xs-12">
                 <div class="about block text-center">
-                    <img src="img/img1.png" alt="">
-                    <h5><a href="#">About Title</a></h5>
-                    <p>Quisque sit amet libero purus. Nulla a dignissim quam. In hac habitasse platea dictumst.</p>
-                </div>
-            </div>
-            <div class="col-lg-3 col-md-6 col-xs-12">
-                <div class="about block text-center">
-                    <img src="img/img1.png" alt="">
-                    <h5><a href="#">About Title</a></h5>
-                    <p>Quisque sit amet libero purus. Nulla a dignissim quam. In hac habitasse platea dictumst.</p>
-                </div>
-            </div>
-            <div class="col-lg-3 col-md-6 col-xs-12">
-                <div class="about block text-center">
-                    <img src="img/img1.png" alt="">
-                    <h5><a href="#">About Title</a></h5>
-                    <p>Quisque sit amet libero purus. Nulla a dignissim quam. In hac habitasse platea dictumst.</p>
+                    <img src="~/img/novembro-azul.jpg" alt="">
+                    <h5><a href="#">Novembro Azul</a></h5>
+                    <p>Campanha de conscientização realizada no mês de novembro dirigida à sociedade e, em especial, aos homens, para conscientização a respeito de doenças masculinas, com ênfase na prevenção e no diagnóstico precoce do câncer de próstata.</p>
                 </div>
             </div>
         </div>
@@ -126,18 +111,17 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12">
-                <h2 class="section-title wow fadeInDown animated" data-wow-delay="0.3s">Contact Us</h2>
+                <h2 class="section-title wow fadeInDown animated" data-wow-delay="0.3s">Contato</h2>
             </div>
         </div>
         <div class="row">
             <div class="col-lg-8 col-md-6 col-xs-12">
-                <h3 class="title-head text-left">Get in touch</h3>
                 <form class="contact-form" data-toggle="validator">
                     <div class="row">
                         <div class="col-lg-4 col-md-12 col-xs-12">
                             <div class="form-group">
                                 <i class="contact-icon fa fa-user"></i>
-                                <input type="text" class="form-control" id="name" placeholder="Full Name" required data-error="Please enter your name">
+                                <input type="text" class="form-control" id="name" placeholder="Nome Completo" required data-error="Please enter your name">
                                 <div class="help-block with-errors"></div>
                             </div>
                         </div>
@@ -151,14 +135,14 @@
                         <div class="col-lg-4 col-md-12 col-xs-12">
                             <div class="form-group">
                                 <i class="contact-icon fa fa-pencil-square-o"></i>
-                                <input type="text" class="form-control" id="subject" placeholder="Subject" required data-error="Please enter your Subject">
+                                <input type="text" class="form-control" id="subject" placeholder="Assunto" required data-error="Please enter your Subject">
                                 <div class="help-block with-errors"></div>
                             </div>
                         </div>
                         <div class="col-lg-12 col-md-12 col-xs-12">
-                            <textarea class="form-control" id="message" rows="4" placeholder="Message" required data-error="Please enter your message"></textarea>
+                            <textarea class="form-control" id="message" rows="4" placeholder="Mensagem" required data-error="Please enter your message"></textarea>
                             <div class="help-block with-errors"></div>
-                            <button type="submit" id="form-submit" class="btn btn-common btn-form-submit">Send Message</button>
+                            <button type="submit" id="form-submit" class="btn btn-common btn-form-submit">Enviar Mensagem</button>
                             <div id="msgSubmit" class="h3 text-center hidden"></div>
                             <div class="clearfix"></div>
                         </div>
@@ -167,30 +151,25 @@
             </div>
 
             <div class="col-lg-4 col-md-6 col-xs-12">
-                <h4 class="contact-info-title text-left">Contact Information</h4>
+                <h4 class="contact-info-title text-left">Informações para Contato</h4>
                 <div class="contact-info">
                     <address>
                         <i class="lni-map-marker icons cyan-color contact-info-icon"></i>
-                        Level 13, 2 Elizabeth St, Melbourne,
+                        Rua Coronel Fagundes, 148 - Centro - Videira/SC
                     </address>
                     <div class="tel-info">
-                        <a href="tel:1800452308"><i class="lni-mobile icons cyan-color contact-info-icon"></i>1800 452 308</a>
-                        <a href="tel:+61(8)82343555"><i class="lni-phone icons cyan-color contact-info-icon"></i>+61 (8) 8234 3555</a>
+                        <a href="tel:1800452308"><i class="lni-mobile icons cyan-color contact-info-icon"></i>(49) 3533-8953</a>
+                        <a href="tel:+61(8)82343555"><i class="lni-phone icons cyan-color contact-info-icon"></i>(49) 99816-5281</a>
                     </div>
-                    <a href="mailto:hello@spiritapp.com"><i class="lni-envelope icons cyan-color contact-info-icon"></i>admin@uideck.com</a>
-                    <a href="#"><i class="lni-tab icons cyan-color contact-info-icon"></i>www.uideck.com</a>
+                    <a href="mailto:hello@spiritapp.com"><i class="lni-envelope icons cyan-color contact-info-icon"></i>rede_rvcc@hotmail.com</a>
+                    
                     <ul class="social-links">
                         <li>
-                            <a href="#" class="fa fa-facebook"></a>
+                            <a href="https://www.facebook.com/redevideirensecombateaocancer" class="fab fa-facebook"></a>
                         </li>
+
                         <li>
-                            <a href="#" class="fa fa-twitter"></a>
-                        </li>
-                        <li>
-                            <a href="#" class="fa fa-instagram"></a>
-                        </li>
-                        <li>
-                            <a href="#" class="fa fa-linkedin"></a>
+                            <a href="https://www.instagram.com.br/rede_rvcc" class="fab fa-instagram"></a>
                         </li>
                     </ul>
                 </div>
@@ -213,7 +192,7 @@
                 <div class="col-lg-6 col-md-6 col-xs-12">
                     <ul class="nav nav-inline justify-content-end">
                         <li class="nav-item">
-                            <a asp-action="Index" asp-controller="Home" asp-area="Admin">Administrativo</a>
+                            <a asp-action="Index" asp-controller="Início" asp-area="Admin">Administrativo</a>
                         </li>
                     </ul>
                 </div>
