--- a/_source/LigaCancer/Views/Home/Index.cshtml
+++ b/_source/LigaCancer/Views/Home/Index.cshtml
@@ -21,7 +21,7 @@
                 <ul class="navbar-nav mr-auto w-100 justify-content-end clearfix">
                     <li class="nav-item active">
                         <a class="nav-link" href="#sliders">
-                            Home
+                            Inicio
                         </a>
                     </li>
                     <li class="nav-item">
@@ -42,17 +42,17 @@
         <ul class="mobile-menu navbar-nav">
             <li>
                 <a class="page-scroll" href="#sliders">
-                    Home
+                    Inicio
                 </a>
             </li>
             <li>
                 <a class="page-scroll" href="#about">
-                    About
+                    Sobre
                 </a>
             </li>
             <li>
                 <a class="page-scroll" href="#contact">
-                    Contact
+                    Contato
                 </a>
             </li>
         </ul>
@@ -161,7 +161,7 @@
                         <a href="tel:1800452308"><i class="lni-mobile icons cyan-color contact-info-icon"></i>(49) 3533-8953</a>
                         <a href="tel:+61(8)82343555"><i class="lni-phone icons cyan-color contact-info-icon"></i>(49) 99816-5281</a>
                     </div>
-                    <a href="mailto:hello@spiritapp.com"><i class="lni-envelope icons cyan-color contact-info-icon"></i>rede_rvcc@hotmail.com</a>
+                    <a href="mailto:rede_rvcc@hotmail.com"><i class="lni-envelope icons cyan-color contact-info-icon"></i>rede_rvcc@hotmail.com</a>
                     
                     <ul class="social-links">
                         <li>
