--- a/_source/LigaCancer/Views/Home/Index.cshtml
+++ b/_source/LigaCancer/Views/Home/Index.cshtml
@@ -114,7 +114,8 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-lg-8 col-md-6 col-xs-12">
+            @* Todo *@
+            @*<div class="col-lg-8 col-md-6 col-xs-12">
                 <form class="contact-form" data-toggle="validator">
                     <div class="row">
                         <div class="col-lg-4 col-md-12 col-xs-12">
@@ -148,7 +149,7 @@
                         </div>
                     </div>
                 </form>
-            </div>
+            </div>*@
 
             <div class="col-lg-4 col-md-6 col-xs-12">
                 <h4 class="contact-info-title text-left">Informações para Contato</h4>
