--- a/_source/LigaCancer/Views/Shared/_Layout.cshtml
+++ b/_source/LigaCancer/Views/Shared/_Layout.cshtml
@@ -7,7 +7,7 @@
     <title>@ViewData["Title"] | Rede Videirense de combate ao Câncer</title>
 
     @* Seo Tags *@
-    <meta name="description" content="Rede Videirense de Combate ao Câncer é uma instituição privada para auxílio de pessoas com câncer">
+    <meta name="description" content="Rede Videirense de Combate ao Câncer é uma instituição privada para auxílio de pessoas com câncer.">
     <meta name="keywords" content="câncer, videira, auxílio, saúde">
     <meta name="robots" content="">
     <meta name="revisit-after" content="1 day">
@@ -15,9 +15,9 @@
     @* OG Properties *@
     <meta property="og:title" content="HomePage" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://www.rvcc.com" />
+    <meta property="og:url" content="https://rvcc.com.br" />
     <meta property="og:image" content="~/img/logo.jpg" />
-    <meta property="og:description" content="Sean Connery found fame and fortune as the suave, sophisticated British agent, James Bond." />
+    <meta property="og:description" content="Rede Videirense de Combate ao Câncer é uma instituição privada para auxílio de pessoas com câncer." />
     <meta property="og:locale" content="pt-br" />
     <meta property="og:site_name" content="Rede Videirense de combate ao Câncer" />
 
