--- a/_source/LigaCancer/Views/Home/Index.cshtml
+++ b/_source/LigaCancer/Views/Home/Index.cshtml
@@ -187,13 +187,13 @@
             <div class="row">
                 <div class="col-lg-6 col-md-6 col-xs-12">
                     <p class="copyright-text">
-                        Todos os direitos reservados © 2019 - Desenvolvido por <a href="https://github.com/felipepergher" target="_blank">Felipe Pergher</a>
+                        Todos os direitos reservados © 2019 - Desenvolvido por <a href="https://www.linkedin.com/in/felipe-pergher" target="_blank">Felipe Pergher</a>
                     </p>
                 </div>
                 <div class="col-lg-6 col-md-6 col-xs-12">
                     <ul class="nav nav-inline justify-content-end">
                         <li class="nav-item">
-                            <a asp-action="Index" asp-controller="Início" asp-area="Admin">Administrativo</a>
+                            <a asp-action="Index" asp-controller="Home" asp-area="Admin">Administrativo</a>
                         </li>
                     </ul>
                 </div>
