--- a/_source/LigaCancer/Views/Shared/_LayoutAdmin.cshtml
+++ b/_source/LigaCancer/Views/Shared/_LayoutAdmin.cshtml
@@ -123,7 +123,7 @@
     <footer class="app-footer">
         <div class="ml-auto">
             <span>Desenvolvido por</span>
-            <a href="https://github.com/felipepergher" target="_blank">Felipe Pergher</a>
+            <a href="https://www.linkedin.com/in/felipe-pergher" target="_blank">Felipe Pergher</a>
         </div>
     </footer>
 
