--- a/_source/LigaCancer/Areas/Admin/Views/Presence/Index.cshtml
+++ b/_source/LigaCancer/Areas/Admin/Views/Presence/Index.cshtml
@@ -51,12 +51,12 @@
                                         </div>
                                         <div class="col-lg-3">
                                             <label asp-for="DateFrom"></label>
-                                            <input asp-for="DateFrom" readonly type="text" class="form-control date dateField" />
+                                            <input asp-for="DateFrom" readonly type="text" class="form-control dateField" />
                                             <span asp-validation-for="DateFrom" class="text-danger"></span>
                                         </div>
                                         <div class="col-lg-3">
                                             <label asp-for="DateTo"></label>
-                                            <input asp-for="DateTo" readonly type="text" class="form-control date dateField" />
+                                            <input asp-for="DateTo" readonly type="text" class="form-control dateField" />
                                             <span asp-validation-for="DateTo" class="text-danger"></span>
                                         </div>
                                     </div>
