#132 changed font awesome to get of CDN

--- a/_source/LigaCancer/Views/Shared/_Layout.cshtml
+++ b/_source/LigaCancer/Views/Shared/_Layout.cshtml
@@ -35,7 +35,7 @@
         <!-- Bootstrap CSS -->
         <link href="~/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
         <!-- Font -->
-        <link href="~/css/fontawesome.min.css" rel="stylesheet" />
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.min.css" />
         <!-- Slicknav -->
         <link href="~/css/cms/slicknav.css" rel="stylesheet" />
         <!-- Animate -->
