--- a/_source/LigaCancer/Views/Shared/_LayoutAdmin.cshtml
+++ b/_source/LigaCancer/Views/Shared/_LayoutAdmin.cshtml
@@ -19,11 +19,12 @@
     <title>@ViewData["Title"] - Rede Videirense de Combate ao Câncer</title>
 
     <environment names="Development">
-        <link href="~/css/fontawesome.min.css" rel="stylesheet" />
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.min.css" />
         <link href="~/css/admin/style.css" rel="stylesheet" />
         <link href="~/css/admin/custom.css" rel="stylesheet" />
     </environment>
     <environment exclude="Development">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.min.css" />
         <link href="~/dist/css/main.min.css" rel="stylesheet" asp-append-version="true" />
     </environment>
 
