#132 Added font awesome to homepage

--- a/_source/LigaCancer/Views/Shared/_Layout.cshtml
+++ b/_source/LigaCancer/Views/Shared/_Layout.cshtml
@@ -48,6 +48,7 @@
         <link href="~/css/cms/responsive.css" rel="stylesheet" />
     </environment>
     <environment exclude="Development">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.min.css" />
         <link href="~/dist/css/homepage.min.css" rel="stylesheet" asp-append-version="true" />
     </environment>
 
