--- a/_source/LigaCancer/Areas/Identity/Pages/Account/ForgotPasswordConfirmation.cshtml
+++ b/_source/LigaCancer/Areas/Identity/Pages/Account/ForgotPasswordConfirmation.cshtml
@@ -10,7 +10,7 @@
         <div class="card p-4">
             <h1>@ViewData["Title"]</h1>
             <p>
-                Por favor verifique seu email para redefinir sua senha. Por favor <a asp-page="./Login">clique aqui para entrar</a>.
+                Verifique seu email para redefinir sua senha. <a asp-page="./Login">Clique aqui para entrar</a>.
             </p>
         </div>
     </div>
