--- a/_source/LigaCancer/Areas/Identity/Pages/Account/ResetPasswordConfirmation.cshtml
+++ b/_source/LigaCancer/Areas/Identity/Pages/Account/ResetPasswordConfirmation.cshtml
@@ -10,7 +10,7 @@
         <div class="card p-4">
             <h1>@ViewData["Title"]</h1>
             <p>
-                Sua senha foi redefinida. Por favor <a asp-page="./Login">clique aqui para entrar</a>.
+                Sua senha foi redefinida. <a asp-page="./Login">Clique aqui para entrar</a>.
             </p>
         </div>
     </div>
