#111 Added change password

--- a/_source/LigaCancer/Views/Shared/_LoginPartial.cshtml
+++ b/_source/LigaCancer/Views/Shared/_LoginPartial.cshtml
@@ -16,8 +16,8 @@
                         <i class="fa fa-lock"></i> Sair
                     </button>
                 </form>
-                <a asp-area="Identity" asp-page="/Account/Manage/Index" class="dropdown-item">
-                    <i class="fa fa-user"></i> Perfil
+                <a asp-area="Identity" asp-page="/Account/Manage/ChangePassword" class="dropdown-item">
+                    <i class="fa fa-user"></i> Trocar Senha
                 </a>
             </div>
         </li>
