--- a/_source/LigaCancer/Areas/Identity/Pages/Account/Manage/ChangePassword.cshtml
+++ b/_source/LigaCancer/Areas/Identity/Pages/Account/Manage/ChangePassword.cshtml
@@ -10,9 +10,6 @@
             <a asp-controller="Home" asp-action="Index">Home</a>
         </li>
         <li class="breadcrumb-item">
-            <a asp-page="./Index">Perfil</a>
-        </li>
-        <li class="breadcrumb-item">
             @ViewData["Title"]
         </li>
     </ol>
@@ -21,11 +18,7 @@
             <div class="animated fadeIn">
                 <div class="row">
 
-                    <div class="col-md-4">
-                        <partial name="_ManageNav" />
-                    </div>
-
-                    <div class="col-lg-6 offset-lg-1">
+                    <div class="col-lg-6 offset-lg-3">
                         <div class="card">
                             <div class="card-header">
                                 <i class="fas fa-user-md"></i> Trocar senha
@@ -33,8 +26,7 @@
                             <div class="card-block">
                                 <div class="row">
                                     <div class="col-md-12">
-                                        <form id="change-password-form" method="post">
-                                            <div asp-validation-summary="All" class="text-danger"></div>
+                                        <form id="changePasswordForm" method="post">
                                             <div class="form-group">
                                                 <label asp-for="Input.OldPassword"></label>
                                                 <input asp-for="Input.OldPassword" class="form-control" />
@@ -50,7 +42,10 @@
                                                 <input asp-for="Input.ConfirmPassword" class="form-control" />
                                                 <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
                                             </div>
-                                            <button type="submit" class="btn btn-primary">Atualizar senha</button>
+                                            <button type="submit" class="btn btn-primary float-right">
+                                                Atualizar senha
+                                                <span id="submitSpinner" class="fa fa-spinner fa-pulse" style="display: none;"></span>
+                                            </button>
                                         </form>
                                     </div>
                                 </div>
@@ -69,5 +64,12 @@
 </main>
 
 @section Scripts {
-    <partial name="_ValidationScriptsPartial" />
+    <environment names="Development">
+        <partial name="_ValidationScriptsPartial" />
+        <script src="~/js/admin/change-password.js"></script>
+    </environment>
+    <environment exclude="Development">
+        <script src="~/dist/js/change-password.min.js" asp-append-version="true"></script>
+    </environment>
+
 }
