--- a/_source/LigaCancer/Areas/Identity/Pages/Account/Manage/ChangePassword.cshtml
+++ b/_source/LigaCancer/Areas/Identity/Pages/Account/Manage/ChangePassword.cshtml
@@ -32,15 +32,32 @@
                                                 <input asp-for="Input.OldPassword" class="form-control" />
                                                 <span asp-validation-for="Input.OldPassword" class="text-danger"></span>
                                             </div>
+                                            <label asp-for="Input.NewPassword"></label>
                                             <div class="form-group">
-                                                <label asp-for="Input.NewPassword"></label>
-                                                <input asp-for="Input.NewPassword" class="form-control" />
-                                                <span asp-validation-for="Input.NewPassword" class="text-danger"></span>
+                                                <div class="input-group mt-2">
+                                                    <div class="input-group-prepend">
+                                                        <span class="input-group-text">
+                                                            <i class="fa fa-passport"></i>
+                                                        </span>
+                                                    </div>
+                                                    <input asp-for="Input.NewPassword" type="password" class="form-control" placeholder="Senha" id="password">
+                                                    <i class="eye-password fas fa-eye-slash eyePassword"></i>
+                                                </div>
+                                                <span asp-validation-for="Input.NewPassword" class="text-danger ml-5"></span>
                                             </div>
+
+                                            <label asp-for="Input.ConfirmPassword"></label>
                                             <div class="form-group">
-                                                <label asp-for="Input.ConfirmPassword"></label>
-                                                <input asp-for="Input.ConfirmPassword" class="form-control" />
-                                                <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
+                                                <div class="input-group mt-2">
+                                                    <div class="input-group-prepend">
+                                                        <span class="input-group-text">
+                                                            <i class="fa fa-passport"></i>
+                                                        </span>
+                                                    </div>
+                                                    <input asp-for="Input.ConfirmPassword" type="password" class="form-control" placeholder="Senha" id="password">
+                                                    <i class="eye-password fas fa-eye-slash eyePassword"></i>
+                                                </div>
+                                                <span asp-validation-for="Input.ConfirmPassword" class="text-danger ml-5"></span>
                                             </div>
                                             <button type="submit" class="btn btn-primary float-right">
                                                 Atualizar senha
