#100-Adjust layout upload files

--- a/_source/LigaCancer/wwwroot/css/admin/custom.css
+++ b/_source/LigaCancer/wwwroot/css/admin/custom.css
@@ -88,3 +88,8 @@
 .dropdown-menu.show {
     z-index: 1100;
 }
+
+.dropzone {
+    border-radius: 5px !important;
+    border: 2px dashed rgb(0, 135, 247) !important;
+}
