--- a/_source/LigaCancer/Views/Shared/_LayoutAdmin.cshtml
+++ b/_source/LigaCancer/Views/Shared/_LayoutAdmin.cshtml
@@ -33,7 +33,10 @@
 
 <body class="app header-fixed sidebar-fixed aside-menu-fixed sidebar-lg-show">
 
+    
+
     <header class="app-header navbar">
+
         <button class="navbar-toggler sidebar-toggler d-lg-none mr-auto" type="button" data-toggle="sidebar-show">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -41,13 +44,7 @@
             <span class="navbar-toggler-icon"></span>
         </button>
 
-        @*
-            Todo Add the RVCC logo here
-            <a asp-action="Index" asp-controller="Home" class="navbar-brand">
-                <img class="navbar-brand-full" src="~/img/brand/logo.svg" width="89" height="25" alt="CoreUI Logo">
-                <img class="navbar-brand-minimized" src="~/img/brand/sygnet.svg" width="30" height="30" alt="CoreUI Logo">
-            </a>
-            *@
+        
 
         <partial name="_LoginPartial" />
 
@@ -57,10 +54,15 @@
             <nav class="sidebar-nav">
                 <ul class="nav">
                     <li class="nav-item">
+                        <a asp-area="Admin" asp-action="Index" asp-controller="Home">
+                            <img class="img-logo" src="~/img/logo/logo-oficial.png" alt="RVCC Logo">
+                        </a>
+                    </li>
+                    <!--<li class="nav-item">
                         <a asp-area="Admin" asp-action="Index" asp-controller="Home" class="nav-link">
                             <i class="nav-icon fas fa-tachometer-alt"></i> Home
                         </a>
-                    </li>
+                    </li>-->
                     <li class="nav-title">Pacientes</li>
                     <li class="nav-item">
                         <a asp-area="Admin" asp-action="Index" asp-controller="Patient" class="nav-link">
@@ -74,16 +76,16 @@
                     </li>
 
                     @*<li class="nav-title">Benefícios</li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">
-                                <i class="nav-icon fa fa-gift"></i> Benefícios
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">
-                                <i class="nav-icon fa fa-clipboard"></i> Tipos de Benefícios
-                            </a>
-                        </li>*@
+        <li class="nav-item">
+            <a class="nav-link" href="#">
+                <i class="nav-icon fa fa-gift"></i> Benefícios
+            </a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="#">
+                <i class="nav-icon fa fa-clipboard"></i> Tipos de Benefícios
+            </a>
+        </li>*@
                     <li class="nav-title">Informações Médicas</li>
                     <li class="nav-item">
                         <a asp-area="Admin" asp-action="Index" asp-controller="Medicine" class="nav-link">
@@ -106,16 +108,16 @@
                         </a>
                     </li>
                     @*<li class="nav-title">Relatórios</li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">
-                                <i class="nav-icon fa fa-file-medical"></i> Relatórios
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">
-                                <i class="nav-icon fa fa-file-medical-alt"></i> Relatórios Pessoais
-                            </a>
-                        </li> *@
+        <li class="nav-item">
+            <a class="nav-link" href="#">
+                <i class="nav-icon fa fa-file-medical"></i> Relatórios
+            </a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="#">
+                <i class="nav-icon fa fa-file-medical-alt"></i> Relatórios Pessoais
+            </a>
+        </li> *@
                     @if (User.IsInRole("Admin"))
                     {
                         <li class="nav-title">Administrativo</li>
