#156-Logo and open graph

--- a/_source/LigaCancer/Views/Shared/_Layout.cshtml
+++ b/_source/LigaCancer/Views/Shared/_Layout.cshtml
@@ -26,7 +26,7 @@
     <meta property="og:title" content="HomePage" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://rvcc.com.br" />
-    <meta property="og:image" content="~/img/logo.jpg" />
+    <meta property="og:image" content="/img/logo-oficial.png" />
     <meta property="og:description" content="Rede Videirense de Combate ao Câncer é uma instituição privada para auxílio de pessoas com câncer." />
     <meta property="og:locale" content="pt-br" />
     <meta property="og:site_name" content="Rede Videirense de combate ao Câncer" />
