add house images and change banner image, remove logo

--- a/_source/LigaCancer/Views/Home/Index.cshtml
+++ b/_source/LigaCancer/Views/Home/Index.cshtml
@@ -15,7 +15,9 @@
                     <span class="icon-menu"></span>
                     <span class="icon-menu"></span>
                 </button>
-                <a href="index.html" class="navbar-brand"><img src="img/logo/logo-oficial.png" alt=""></a>
+                @*<a href="/" class="navbar-brand" style="margin: 5% 0;">
+                    <img src="img/logo/logo-oficial.png" alt="">
+                </a>*@
             </div>
             <div class="collapse navbar-collapse" id="main-navbar">
                 <ul class="navbar-nav mr-auto w-100 justify-content-end clearfix">
@@ -67,11 +69,11 @@
             <div id="light-slider" class="carousel slide">
                 <div id="carousel-area">
                     <div id="carousel-slider" class="carousel slide" data-ride="carousel">
-                        <div class="carousel-inner" role="listbox">
+                        <div class="carousel-inner" style="height: 100%"; role="listbox">
                             <div class="carousel-item active">
-                                <img src="~/img/imagem4.png" alt="" style="min-height: 175px;">
+                                <img src="~/img/indice.png" alt="" style="height: 100%;">
                                 <div class="carousel-caption">
-                                    <h3 class="slide-title animated fadeInDown"><span>RVCC</span> - Rede Videirense de Combate ao Câncer</h3>
+                                    <!--   <h3 class="slide-title animated fadeInDown"><span>RVCC</span> - Rede Videirense de Combate ao Câncer</h3> -->
                                 </div>
                             </div>
                         </div>
@@ -113,6 +115,57 @@
     </div>
 </div>
 <!-- About Section End -->
+
+<section id="portfolio" class="section-padding">
+    <!-- Container Starts -->
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <h2 class="section-title wow fadeInDown animated" data-wow-delay="0.3s">Casa Própria</h2>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-12 col-md-12">
+                <!-- Portfolio Controller/Buttons -->
+                <div class="controls text-center wow fadeInUpQuick" data-wow-delay=".6s">
+                <p>Segue imagens sobre a construção da casa própria da rede videirense de combate ao cancêr</p>
+                <!-- Portfolio Controller/Buttons Ends-->
+            </div>
+
+            <!-- Portfolio Recent Projects -->
+            <div id="portfolio" class="row wow fadeInUpQuick" data-wow-delay="0.8s">
+                <div class="col-lg-4 col-md-6 col-xs-12 ">
+                    <div class="portfolio-item">
+                        <div class="portfolio-img">
+                            <img src="~/img/CASAAZULEROSA01.jpg" alt="" />
+                        </div>
+                        
+                    </div>
+                </div>
+                
+                <div class="col-lg-4 col-md-6 col-xs-12 ">
+                    <div class="portfolio-item">
+                        <div class="portfolio-img">
+                            <img src="~/img/CASAAZULEROSA03.jpg" alt="" />
+                        </div>
+                        
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 col-xs-12 ">
+                    <div class="portfolio-item">
+                        <div class="portfolio-img">
+                            <img src="~/img/CASAAZULEROSA04.jpg" alt="" />
+                        </div>
+                        
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Container Ends -->
+</section>
+<!-- Portfolio Section Ends -->
+
 
 <section id="contact" class="contact-form section-padding">
     <div class="container">
@@ -158,9 +211,9 @@
                         </div>
                     </form>
                 </div>*@
-
-            <div class="col-lg-4 col-md-6 col-xs-12">
-                <h4 class="contact-info-title text-left">Informações para Contato</h4>
+            <div class="col-md-4 col-lg-4"></div>
+            <div class="col-lg-4 col-md-6 col-xs-12 text-center">
+                <h4 class="contact-info-title">Informações para Contato</h4>
                 <div class="contact-info">
                     <address>
                         <i class="lni-map-marker icons cyan-color contact-info-icon"></i>
