--- a/_source/LigaCancer/wwwroot/css/cms/extras.css
+++ b/_source/LigaCancer/wwwroot/css/cms/extras.css
@@ -78,7 +78,7 @@ a a:focus {
 .navbar-expand-lg .navbar-nav li a:hover,
 .navbar-expand-lg .navbar-nav li .active > a,
 .navbar-expand-lg .navbar-nav li a:focus {
-  color: #E63D4F;
+  color: #04528b;
   outline: none;
 }
 
@@ -86,12 +86,12 @@ a a:focus {
 .navbar-expand-lg .navbar-nav .nav-link.active,
 .navbar-expand-lg .navbar-nav .nav-link.open,
 .navbar-expand-lg .navbar-nav .open > .nav-link {
-  color: #E63D4F !important;
+  color: #04528b !important;
 }
 
 .navbar-expand-lg .navbar-nav .nav-link:focus,
 .navbar-expand-lg .navbar-nav .nav-link:hover {
-  color: #E63D4F !important;
+  color: #04528b !important;
 }
 
 .navbar {
